--- a/CSC_461_HiFi_Streaming/index.html
+++ b/CSC_461_HiFi_Streaming/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- HTML Codes by Quackit.com -->
 <title>
 CSC 461</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
-h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
-p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
-</style>
 </head>
+
 <body>
 <h1>Main Page</h1>
-<p>This is a placeholder</p>
+<a href="./pp.pdf">Project Proposal</a>
 </body>
 </html>
