October 23rd Update
Added update for October 23rd. Also added date headers to distinguish the date added.

--- a/CSC_461_HiFi_Streaming/index.html
+++ b/CSC_461_HiFi_Streaming/index.html
@@ -4,9 +4,11 @@
 <title>
 CSC 461</title>
 </head>
-
 <body>
 <h1>Main Page</h1>
+<h2>October 9th, 2023</h2>
 <a href="./pp.pdf">Project Proposal</a>
+<h2>October 23rd</h2>
+I didn't realize we had to deliver a update bi-weekly, so I haven't compiled anything to share. My reasearch hasn't unearthed anything in the codec that would prevent FLAC from being used for audio streaming, beyond the high bandwith and storage. 
 </body>
 </html>
