--- a/CSC_461_HiFi_Streaming/index.html
+++ b/CSC_461_HiFi_Streaming/index.html
@@ -3,12 +3,28 @@
 <head>
 <title>
 CSC 461</title>
+<meta charset="UTF-8">
+<!--[if lt IE 9]>
+<script src="html5shiv-master\Gruntfile.js"></script>
+<![endif]-->
+<meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-<h1>Main Page</h1>
+<div id="wrapper">
+<header>
+
+</header>
+<main>
+<h1>CSC 461: Hi-Fi Streaming</h1>
 <h2>October 9th, 2023</h2>
 <a href="./pp.pdf">Project Proposal</a>
 <h2>October 23rd</h2>
 I didn't realize we had to deliver a update bi-weekly, so I haven't compiled anything to share. My reasearch hasn't unearthed anything in the codec that would prevent FLAC from being used for audio streaming, beyond the high bandwith and storage. 
+<h2>Novemeber 6th, 2023</h2>
+<a href="./pu.pdf">Project Mid-term Update</a>
+</main>
+</div>
 </body>
 </html>
