Added Nov 20th update
Added update for November 20th and fixed some typos.

--- a/CSC_461_HiFi_Streaming/index.html
+++ b/CSC_461_HiFi_Streaming/index.html
@@ -20,10 +20,14 @@ CSC 461</title>
 <h1>CSC 461: Hi-Fi Streaming</h1>
 <h2>October 9th, 2023</h2>
 <a href="./pp.pdf">Project Proposal</a>
-<h2>October 23rd</h2>
-I didn't realize we had to deliver a update bi-weekly, so I haven't compiled anything to share. My reasearch hasn't unearthed anything in the codec that would prevent FLAC from being used for audio streaming, beyond the high bandwith and storage. 
+<h2>October 23rd, 2023</h2>
+I didn't realize we had to deliver a update bi-weekly, so I haven't compiled anything to share. My research hasn't unearthed anything in the codec that would prevent FLAC from being used for audio streaming, beyond the high bandwidth and storage. 
 <h2>November 6th, 2023</h2>
 <a href="./pu.pdf">Project Mid-term Update</a>
+<h2>November 20th, 2023</h2>
+As suggested by Myles Petersen, I decided to look into the potential to add a lower bit-rate option. I looked into what qualities Tidal currently offers, and have verified that they offer a 320 kbps option for streaming, so will include this.
+<br><br>
+As Kieran Smith gave me the idea for compressing the audio during transmission, I decided to look into if any feasible compression algorithms existed for audio or file steaming in 2006. From what I could find, there are no existing algorithms at the moment to compress audio during transmission, so any compression could only be find in the creation of the FLAC files. I also checked Tidal's current website, and they also report speed requirements that line up with my calculations, so I feel this confirms there are no compression algorithms that can ber used.
 </main>
 </div>
 </body>
