Added Project Presentation Video

--- a/CSC_461_HiFi_Streaming/index.html
+++ b/CSC_461_HiFi_Streaming/index.html
@@ -28,6 +28,8 @@ I didn't realize we had to deliver a update bi-weekly, so I haven't compiled any
 As suggested by Myles Petersen, I decided to look into the potential to add a lower bit-rate option. I looked into what qualities Tidal currently offers, and have verified that they offer a 320 kbps option for streaming, so will include this.
 <br><br>
 As Kieran Smith gave me the idea for compressing the audio during transmission, I decided to look into if any feasible compression algorithms existed for audio or file steaming in 2006. From what I could find, there are no existing algorithms at the moment to compress audio during transmission, so any compression could only be find in the creation of the FLAC files. I also checked Tidal's current website, and they also report speed requirements that line up with my calculations, so I feel this confirms there are no compression algorithms that can ber used.
+<h2>December 4th, 2023</h2>
+<video width=99% controls><source src="Pd-1.mp4" type="video/mp4">Your browser doesn't support the HTML5 video tag. Try another browser</video>
 </main>
 </div>
 </body>
