Add Final Report
Uploaded CSC 461 Final Report and Updated HTML to link it

--- a/CSC_461_HiFi_Streaming/index.html
+++ b/CSC_461_HiFi_Streaming/index.html
@@ -30,6 +30,8 @@ As suggested by Myles Petersen, I decided to look into the potential to add a lo
 As Kieran Smith gave me the idea for compressing the audio during transmission, I decided to look into if any feasible compression algorithms existed for audio or file steaming in 2006. From what I could find, there are no existing algorithms at the moment to compress audio during transmission, so any compression could only be find in the creation of the FLAC files. I also checked Tidal's current website, and they also report speed requirements that line up with my calculations, so I feel this confirms there are no compression algorithms that can ber used.
 <h2>December 4th, 2023</h2>
 <video width=99% controls><source src="Pd-1.mp4" type="video/mp4">Your browser doesn't support the HTML5 video tag. Try another browser</video>
+<h2>December 11th, 2023</h2>
+<a href="./pr.pdf">Final Report</a>
 </main>
 </div>
 </body>
