Added CSC 466 Project Proposal

--- a/CSC_466/index.html
+++ b/CSC_466/index.html
@@ -18,7 +18,8 @@ CSC 461</title>
 </header>
 <main>
 <h1>CSC 466</h1>
-<p>Placeholder</p>
+<h2>February 7th, 2025</h2>
+<a href="./Proposal.pdf">Project Proposal</a>
 </main>
 </div>
 </body>
