--- a/CSC_466/index.html
+++ b/CSC_466/index.html
@@ -20,6 +20,8 @@ CSC 466</title>
 <h1>CSC 466</h1>
 <h2>February 7th, 2025</h2>
 <a href="./Proposal.pdf">Project Proposal</a>
+<h2>February 21st, 2025</h2>
+<a href="./BWU1.pdf">Bi-Weekly Update #1</a>
 </main>
 </div>
 </body>
