Bi-Weekly Update #3

--- a/CSC_466/index.html
+++ b/CSC_466/index.html
@@ -22,8 +22,10 @@ CSC 466</title>
 <a href="./Proposal.pdf">Project Proposal</a>
 <h2>February 21st, 2025</h2>
 <a href="./BWU1.pdf">Bi-Weekly Update #1</a>
-<h2>February 21st, 2025</h2>
+<h2>March 7th, 2025</h2>
 <a href="./BWU2.pdf">Bi-Weekly Update #2/Midterm Update</a>
+<h2>March 21st, 2025</h2>
+<a href="./BWU3.pdf">Bi-Weekly Update #3</a>
 </main>
 </div>
 </body>
