--- a/CSC_466/index.html
+++ b/CSC_466/index.html
@@ -27,9 +27,11 @@ CSC 466</title>
 <h2>March 21st, 2025</h2>
 <a href="./BWU3.pdf">Bi-Weekly Update #3</a>
 <h2>April 4th, 2025</h2>
-<a href="./BWU4.pdf">Bi-Weekly Update #4 (Final)</a>
-<br><br>
 <video width=99% controls><source src="Pd-1.mp4" type="video/mp4">Your browser doesn't support the HTML5 video tag. Try another browser</video>
+<br><br>
+<a href="./BWU4.pdf">Bi-Weekly Update #4 (Final)</a>
+<h2>April 18th, 2025</h2>
+<a href="./PR.pdf">Final Report</a>
 </main>
 </div>
 </body>
